--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,16 @@
               <li><a ui-sref="about.contact">Contact</a></li>
               <li><a ui-sref="about.hello">Hello</a></li>
             </ul>
+            <div class="col-sm-3 col-md-3 pull-right">
+              <form class="navbar-form" role="search">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    </div>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
