cleaned the project removed unused models and files added ngdocs

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
               <span class="icon-bar"></span>
             </button>
             <div itemscope itemtype="http://schema.org/brand" class="inner">
-              <a class="navbar-brand" href="#/">
+              <a class="navbar-brand" href="#/tab-b/1">
                 <img itemprop="logo" src="/images/netcraft-logo.png" alt="wepapp logo" title="weapp logo"/>
               </a>
             </div>
@@ -82,8 +82,6 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/ngstorage/ngStorage.js"></script>
     <!-- endbower -->
@@ -92,11 +90,9 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
-        <script src="scripts/controllers/taba.js"></script>
-        <script src="scripts/controllers/tabb.js"></script>
-        <script src="scripts/controllers/contact.js"></script>
-        <script src="scripts/services/dataserv.js"></script>
+        <script src="scripts/controllers/tab-a.js"></script>
+        <script src="scripts/controllers/tab-b.js"></script>
+        <script src="scripts/services/data-service.js"></script>
         <script src="scripts/directives.js"></script>
         <!-- endbuild -->
 </body>
