fixed some relative urls

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
             </button>
             <div itemscope itemtype="http://schema.org/brand" class="inner">
               <a class="navbar-brand" href="#/tab-b/1">
-                <img itemprop="logo" src="/images/netcraft-logo.png" alt="wepapp logo" title="weapp logo"/>
+                <img itemprop="logo" src="images/netcraft-logo.png" alt="wepapp logo" title="weapp logo"/>
               </a>
             </div>
           </div>
