--- a/app/index.html
+++ b/app/index.html
@@ -66,16 +66,16 @@
     </footer>
 
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <!-- <script>
+    <!-- Google Analytics -->
+     <script>
        !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
        (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
        r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
        }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-       ga('create', 'UA-XXXXX-X');
+       ga('create', 'UA-61879977-1');
        ga('send', 'pageview');
-    </script> -->
+    </script>
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
